# melanoma-classification

./: .gitignore  README.md  ideas_requirements.txt  pyproject.toml
modelling/: __init__.py  evaluation.ipynb  training.ipynb
modelling/evaluation/: evaluator.py
modelling/training/: trainer.py
modelling/utils/: dermmel.py
src/melanoma_classification/: __init__.py  __main__.py  paths.py
src/melanoma_classification/evaluation/: __init__.py  eval.py  report.py
src/melanoma_classification/inference/: __init__.py  infer.py
src/melanoma_classification/model/: __init__.py  encoder.py  instances.py  multi_head_self_attention.py  patch_embedding.py  vision_transformer.py
src/melanoma_classification/utils/: __init__.py  attentions.py  dermmel.py  devices.py  git.py  mlflow.py  train.py  transformations.py
src/melanoma_classification/weights/: vit.pth
